# financial-probabilistic-time-series-model-benchmarking-library

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/dataset/: crsp_local.yaml
configs/model/: quantileformer.yaml
configs/runs/: crsp_deepvar.yaml
finprobts/: __init__.py  cli.py
finprobts/data/: registry.py
finprobts/evaluation/: __init__.py  metrics.py
finprobts/experiment/: runner.py
finprobts/models/: __init__.py  registry.py
finprobts/models/quantileformer/: REFERENCE.md  __init__.py  model.py
tests/: test_torch_models.py
